@@ -16,6 +16,7 @@ namespace Castle.MicroKernel.SubSystems.Naming
 {
 	using System;
 	using System.Collections;
+	using System.Threading;
 
 	/// <summary>
 	/// Default <see cref="INamingSubSystem"/> implementation.
@@ -37,15 +38,15 @@ namespace Castle.MicroKernel.SubSystems.Naming
 		/// </summary>
 		protected IDictionary service2Handler;
 
-		private object locker = new object();
+		private ReaderWriterLock locker = new ReaderWriterLock();
 
 		/// <summary>
 		/// Initializes a new instance of the <see cref="DefaultNamingSubSystem"/> class.
 		/// </summary>
 		public DefaultNamingSubSystem()
 		{
-			key2Handler = Hashtable.Synchronized(new Hashtable());
-			service2Handler = Hashtable.Synchronized(new Hashtable());
+			key2Handler = new Hashtable();
+			service2Handler = new Hashtable();
 		}
 
 		#region INamingSubSystem Members
@@ -54,8 +55,9 @@ namespace Castle.MicroKernel.SubSystems.Naming
 		{
 			Type service = handler.ComponentModel.Service;
 
-			lock(locker)
+			try
 			{
+				locker.AcquireWriterLock(Timeout.Infinite);
 				if (key2Handler.Contains(key))
 				{
 					throw new ComponentRegistrationException(
@@ -69,38 +71,61 @@ namespace Castle.MicroKernel.SubSystems.Naming
 
 				this[key] = handler;
 			}
-
+			finally
+			{
+				locker.ReleaseLock();
+			}
 		}
 
 		public virtual bool Contains(String key)
 		{
-			lock(locker)
+			try
 			{
+				locker.AcquireReaderLock(Timeout.Infinite);
 				return key2Handler.Contains(key);
+			}
+			finally
+			{
+				locker.ReleaseLock();
 			}
 		}
 
 		public virtual bool Contains(Type service)
 		{
-			lock(locker)
+			try
 			{
+				locker.AcquireReaderLock(Timeout.Infinite);
 				return service2Handler.Contains(service);
+			}
+			finally
+			{
+				locker.ReleaseLock();
 			}
 		}
 
 		public virtual void UnRegister(String key)
 		{
-			lock (locker)
+			try
 			{
+				locker.AcquireWriterLock(Timeout.Infinite);
 				key2Handler.Remove(key);
+			}
+			finally
+			{
+				locker.ReleaseLock();
 			}
 		}
 
 		public virtual void UnRegister(Type service)
 		{
-			lock(locker)
+			try
 			{
+				locker.AcquireWriterLock(Timeout.Infinite);
 				service2Handler.Remove(service);
+			}
+			finally
+			{
+				locker.ReleaseLock();
 			}
 		}
 
@@ -108,9 +133,14 @@ namespace Castle.MicroKernel.SubSystems.Naming
 		{
 			get
 			{
-				lock(locker)
+				try
 				{
+					locker.AcquireReaderLock(Timeout.Infinite);
 					return key2Handler.Count;
+				}
+				finally
+				{
+					locker.ReleaseLock();
 				}
 			}
 		}
@@ -119,9 +149,14 @@ namespace Castle.MicroKernel.SubSystems.Naming
 		{
 			if (key == null) throw new ArgumentNullException("key");
 
-			lock (locker)
+			try
 			{
+				locker.AcquireReaderLock(Timeout.Infinite);
 				return key2Handler[key] as IHandler;
+			}
+			finally
+			{
+				locker.ReleaseLock();
 			}
 		}
 
@@ -134,11 +169,16 @@ namespace Castle.MicroKernel.SubSystems.Naming
 		{
 			if (service == null) throw new ArgumentNullException("service");
 
-			lock (locker)
+			try
 			{
+				locker.AcquireReaderLock(Timeout.Infinite);
 				IHandler handler = service2Handler[service] as IHandler;
 
 				return handler;
+			}
+			finally
+			{
+				locker.ReleaseLock();
 			}
 		}
 
@@ -147,11 +187,16 @@ namespace Castle.MicroKernel.SubSystems.Naming
 			if (key == null) throw new ArgumentNullException("key");
 			if (service == null) throw new ArgumentNullException("service");
 
-			lock (locker)
+			try
 			{
+				locker.AcquireReaderLock(Timeout.Infinite);
 				IHandler handler = key2Handler[key] as IHandler;
 
 				return handler;
+			}
+			finally
+			{
+				locker.ReleaseLock();
 			}
 		}
 
@@ -191,18 +236,23 @@ namespace Castle.MicroKernel.SubSystems.Naming
 
 		public virtual IHandler[] GetHandlers()
 		{
-			lock (locker)
+			try
 			{
+				locker.AcquireReaderLock(Timeout.Infinite);
 				IHandler[] list = new IHandler[key2Handler.Values.Count];
 
 				int index = 0;
 
-				foreach(IHandler handler in key2Handler.Values)
+				foreach (IHandler handler in key2Handler.Values)
 				{
 					list[index++] = handler;
 				}
 
 				return list;
+			}
+			finally
+			{
+				locker.ReleaseLock();
 			}
 		}
 
@@ -210,9 +260,14 @@ namespace Castle.MicroKernel.SubSystems.Naming
 		{
 			set
 			{
-				lock(locker)
+				try
 				{
+					locker.AcquireWriterLock(Timeout.Infinite);
 					service2Handler[service] = value;
+				}
+				finally
+				{
+					locker.ReleaseLock();
 				}
 			}
 		}
@@ -221,9 +276,14 @@ namespace Castle.MicroKernel.SubSystems.Naming
 		{
 			set
 			{
-				lock (locker)
+				try
 				{
+					locker.AcquireWriterLock(Timeout.Infinite);
 					key2Handler[key] = value;
+				}
+				finally
+				{
+					locker.ReleaseLock();
 				}
 			}
 		}
